--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kp1116/react-test -f   ./client -f Dockerfile.dev ./client
+  - docker build -t kp1116/react-test -f ./client/Dockerfile.dev
 
 script:
   - docker run -e CI=true kp1116/react-test npm test
