--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t kp1116/react-test -f ./client/Dockerfile.dev
+  - docker build -t kp1116/reacttest -f ./client/Dockerfile.dev
 
 script:
-  - docker run -e CI=true kp1116/react-test npm test
+  - docker run -e CI=true kp1116/reacttest npm test
 
 after_success:
-  - docker build -t kp1116/multi-client ./client
-  - docker build -t kp1116/multi-nginx ./nginx
-  - docker build -t kp1116/multi-server ./server
-  - docker build -t kp1116/multi-worker ./worker
+  - docker build -t kp1116/multiclient ./client
+  - docker build -t kp1116/multinginx ./nginx
+  - docker build -t kp1116/multiserver ./server
+  - docker build -t kp1116/multiworker ./worker
   # Login to Docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # push them to Docker hub
-  - docker push kp1116/multi-client
-  - docker push kp1116/multi-nginx
-  - docker push kp1116/multi-server
-  - docker push kp1116/multi-worker
+  - docker push kp1116/multiclient
+  - docker push kp1116/multinginx
+  - docker push kp1116/multiserver
+  - docker push kp1116/multiworker
