--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY client/package.json /app
+COPY ./package.json /app
 RUN npm install
 COPY . /app
 RUN npm run build
